[workspace]
resolver = "2"

[package]
name = "single_thread_cell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Create a cell that can only be accessed by a single thread."
readme = "README.md"
repository = "https://github.com/KunoSayo/single_thread_cell"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
